2004-01-27  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* coders/png.c: Add DestroyBlobInfo() calls to stop memory leak when
	processing JNG datastreams.

2004-01-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.h (MagickReallocMemory): Added a cast required to
	make C++ Happy.
	* coders/tiff.c: Adjust for bitstream API function renaming.
	* magick/bit_stream.h: Rename BitStreamRead() to
	BitStreamMSBRead() to indicate that it reads most significant bits
	first ("big endian" order).  Rename BitStreamWrite() to
	BitStreamMSBWrite() to indicate that it writes most significant
	bits first ("big endian" order).
	* wand/magick_wand.c: Updated to lastest ImageMagick API.

2004-01-26  Mike Chiarappa  <mikechiarappa@libero.it>

	* magick/stream.c: (SetPixelStream) removed "const" from definition of 
	local variable [StreamHandler stream]. Borland C++Builder compiler signal
	error "Cannot modify a const object".
	
2004-01-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (TIFFMapBlob): Allow libtiff to access memory
	mapped file (or BLOB in memory) directly.  This provides a small
	performance increase.
	* magick/constitute.c (ReadImage): If a .mpc file is a temporary
	file, then be sure to remove the associated .cache file when
	removing the .mpc file.
	* magick/log.h (LogEventType): ExceptionEventMask now maps to
	WarningEventMask|ErrorEventMask|FatalErrorEventMask so that
	'-debug exception' works again.
	* magick/blob.c (CloseBlob): Allow CloseBlob to be invoked on a
	blob which is not open (in UndefinedStream state).
	(BlobInfo): The definition of BlobInfo is now private to blob.c.
	(StreamType): The StreamType enumeration is now private to blob.c.
	(GetBlobFileHandle): New function to access the blob file handle.
	(GetBlobStreamHandler): New function to access the blob stream
	handler.
	(GetBlobStreamType): This function is removed entirely.
	(BlobIsSeekable): New function to test if SeekBlob will work