@@ -53,6 +53,29 @@
 </tr>
 </table>
 <p>
+2004-01-27  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/png.c (WriteOneJNGImage): Use DestroyBlob.
+  <LI> magick/list.c (SyncNextImageInList): Use DestroyBlob.
+  <LI> magick/image.c (AllocateNextImage): Use DestroyBlob.
+        (DestroyImage): DestroyBlob.<BR>
+  <LI> coders/wpg.c (ExtractPostscript): Use DestroyBlob.
+  <LI> magick/blob.c (DestroyBlob): New function. Similar to
+        DestroyBlobInfo except that it requires an Image * argument and
+        zeros the blob pointer. This one is preferred for use over
+        DestroyBlobInfo.
+
+</UL>
+<p>
+2004-01-27  Glenn Randers-Pehrson &lt;randeg@alum.rpi.edu&gt;
+
+<UL>
+  <LI> coders/png.c: Add DestroyBlobInfo() calls to stop memory leak when
+        processing JNG datastreams.
+
+</UL>
+<p>
 2004-01-26  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
